--- a/4.스타벅스입지분석/4.1.1.크롤링을 활용해 서울시 스타벅스 매장 목록 데이터 생성하기.ipynb
+++ b/4.스타벅스입지분석/4.1.1.크롤링을 활용해 서울시 스타벅스 매장 목록 데이터 생성하기.ipynb
@@ -19,8 +19,8 @@
    "outputs": [],
    "source": [
     "# 예제 4-2\n",
-    "# browser = webdriver.Chrome(‘c:/playwithdata/chromedriver.exe’)\n",
-    "browser = webdriver.Chrome('./driver/chromedriver')\n",
+    "browser = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
+    "# browser = webdriver.Chrome('./driver/chromedriver')\n",
     "url = 'https://www.istarbucks.co.kr/store/store_map.do?disp=locale'\n",
     "browser.get(url)"
    ]
