코드 오류 및 수정

--- a/6_Best_Product/6_1&2_Crawling.ipynb
+++ b/6_Best_Product/6_1&2_Crawling.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# 예제 6-1 selenium으로 다나와 검색 결과 URL에 접속\n",
     "from selenium import webdriver\n",
-    "browser = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
+    "driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
     "url = \"http://search.danawa.com/dsearch.php?query=무선청소기&tab=main\"\n",
     "driver.get(url)"
    ]
@@ -40,6 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
     "#예제 6-2 웹 페이지의 HTML 정보 가져오기\n",
     "html = driver.page_source\n",
     "soup = BeautifulSoup(html, 'html.parser')"
@@ -109,8 +111,7 @@
    "outputs": [],
    "source": [
     "# 예제 6-8 가격 정보 가져오기\n",
-    "price = prod_items[0].select('li.rank_one > p.price_sect > a > strong')[0].text.strip().\n",
-    "replace(\",\",\"\")\n",
+    "price = prod_items[0].select('li.rank_one > p.price_sect > a > strong')[0].text.strip().replace(\",\",\"\")\n",
     "print(price)"
    ]
   },
@@ -162,8 +163,7 @@
     "            spec_list = ''\n",
     "        # ③ 가격 정보 가져오기 \n",
     "        try: \n",
-    "            price = prod_item.select('li.rank_one > p.price_sect > a > strong')[0].text.\n",
-    "strip().replace(\",\",\"\")\n",
+    "            price = int(prod_item.select('li.rank_one > p.price_sect > a > strong')[0].text.strip().replace(\",\",\"\"))\n",
     "        except:\n",
     "            price = 0\n",
     "        prod_data.append([title, spec_list, price])\n",
@@ -262,7 +262,8 @@
     "import time\n",
     "from bs4 import BeautifulSoup\n",
     "from tqdm import tqdm_notebook\n",
-    "browser = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
+    "driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
+    "\n",
     "# 암묵적으로 웹 자원 로드를 위해 3초까지 기다림\n",
     "driver.implicitly_wait(3)\n",
     "keyword = '무선청소기'\n",
@@ -344,7 +345,7 @@
     "# 예제 6-18 회사명 + 모델명 분리\n",
     "company_list = []\n",
     "product_list = []\n",
-    "for title in datas['상품명']:\n",
+    "for title in data['상품명']:\n",
     "    title_info = title.split(' ', 1)\n",
     "    company_name = title_info[0]\n",
     "    product_name = title_info[1]\n",
@@ -434,7 +435,6 @@
     "    suction_value = None \n",
     "    \n",
     "    ## spec_list의 각 원소에서 사용시간, 흡입력 수치 추출\n",
-    "    \n",
     "    for spec in spec_list:\n",
     "        if '사용시간' in spec: \n",
     "            use_time_value = spec.split(' ')[1].strip()             \n",
@@ -453,8 +453,15 @@
     "# 예제 6-24 카테고리, 사용시간, 흡입력에 대한 전처리 결과 확인\n",
     "print(\"카테고리\", len(category_list), category_list[0:5])\n",
     "print(\"사용시간\", len(use_time_list), use_time_list[0:5])\n",
-    "print(\"흡입력\", len(attraction_power_list), attraction_power_list[0:5])"
+    "print(\"흡입력\", len(suction_list), suction_list[0:5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -473,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
