--- a/6_Best_Product/6_3_preprocessing.ipynb
+++ b/6_Best_Product/6_3_preprocessing.ipynb
@@ -44,7 +44,7 @@
     "# 예제 6-18 회사명 + 모델명 분리\n",
     "company_list = []\n",
     "product_list = []\n",
-    "for title in datas['상품명']:\n",
+    "for title in data['상품명']:\n",
     "    title_info = title.split(' ', 1)\n",
     "    company_name = title_info[0]\n",
     "    product_name = title_info[1]\n",
@@ -134,7 +134,6 @@
     "    suction_value = None \n",
     "    \n",
     "    ## spec_list의 각 원소에서 사용시간, 흡입력 수치 추출\n",
-    "    \n",
     "    for spec in spec_list:\n",
     "        if '사용시간' in spec: \n",
     "            use_time_value = spec.split(' ')[1].strip()             \n",
@@ -153,7 +152,7 @@
     "# 예제 6-24 카테고리, 사용시간, 흡입력에 대한 전처리 결과 확인\n",
     "print(\"카테고리\", len(category_list), category_list[0:5])\n",
     "print(\"사용시간\", len(use_time_list), use_time_list[0:5])\n",
-    "print(\"흡입력\", len(attraction_power_list), attraction_power_list[0:5])"
+    "print(\"흡입력\", len(suction_value), suction_value[0:5])"
    ]
   },
   {
@@ -193,7 +192,7 @@
    "outputs": [],
    "source": [
     "# 예제 6-26 사용시간을 분 단위로 조정하는 함수의 테스트\n",
-    "times = [\"40분\", \"4분\", \"1시간\", \"3시간30분\", \"4시간]\n",
+    "times = [\"40분\", \"4분\", \"1시간\", \"3시간30분\", \"4시간\"]\n",
     "for time in times:\n",
     "    time_value = convert_time_minute(time)\n",
     "    print(time, \"=\", time_value)"
@@ -252,7 +251,7 @@
     "new_suction_list = []\n",
     "for power in suction_list:\n",
     "    value = get_suction (power)\n",
-    "    new_ suction_list.append(value)"
+    "    new_suction_list.append(value)"
    ]
   },
   {
@@ -309,6 +308,13 @@
     "# 예제 6-33 엑셀로 저장\n",
     "pd_data_final.to_excel('./files/3_2_danawa_data_final.xlsx', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -327,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
