--- a/6_Best_Product/6_4_Product_Analysis.ipynb
+++ b/6_Best_Product/6_4_Product_Analysis.ipynb
@@ -25,6 +25,7 @@
     "# 예제 6-34 데이터 불러오기 \n",
     "import pandas as pd\n",
     "danawa_data = pd.read_excel('./files/3_2_danawa_data_final.xlsx')\n",
+    "danawa_data.info()\n",
     "danawa_data.head()"
    ]
   },
@@ -85,9 +86,9 @@
    "source": [
     "# 예제 6-39 가성비 좋은 제품 탐색\n",
     "condition_data = danawa_data [\n",
-    "    (danawa_data ['가격'] <= price_mean_value) & \n",
-    "    (danawa_data ['흡입력'] >= suction_mean_value) & \n",
-    "    (danawa_data ['사용시간'] >= use_time_mean_value),]\n",
+    "    (danawa_data['가격'] <= price_mean_value) & \n",
+    "    (danawa_data['흡입력'] >= suction_mean_value) & \n",
+    "    (danawa_data['사용시간'] >= use_time_mean_value)]\n",
     "condition_data"
    ]
   },
@@ -224,6 +225,13 @@
     "    plt.text(x, y, s, size=20)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -242,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
