--- a/1_First_Step/1_4_Python_Basic.ipynb
+++ b/1_First_Step/1_4_Python_Basic.ipynb
@@ -144,7 +144,8 @@
     "# 예제 1-11 리스트 추가하기(하나의 원소로 붙이기): 리스트1.append(리스트2)\n",
     "l1 = ['a']\n",
     "l2 = ['b','c','e']\n",
-    "l1.append(l2)      \n"
+    "l1.append(l2)      \n",
+    "print(l1)"
    ]
   },
   {
