--- a/2_Start_DataAnalysis/2_2_Crawling.ipynb
+++ b/2_Start_DataAnalysis/2_2_Crawling.ipynb
@@ -461,7 +461,7 @@
    "source": [
     "# 예제 2-61 가수 정보 가져오기\n",
     "singer = song.select('div.ellipsis.rank02 > a')[0].text\n",
-    "len(singer)"
+    "singer"
    ]
   },
   {
