네이버API중단에 따른 카카오API 활용(4-3인스타지도시각화부분 변경)

--- a/4_Jeju_Hotplace/4_3_Map.ipynb
+++ b/4_Jeju_Hotplace/4_3_Map.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 네이버 API Search Place 중단에 따라 카카오 API 로  실습코드 변경하였습니다 #####\n",
+    "\n",
+    "- 변경 코드: 예제 4-25, 예제 4-26\n",
+    "- 실습코드 변경일자: 2020.02.17\n",
+    "- 안내 페이지: http://bit.ly/pwd_kakaoAPI_guide\n",
+    "- 깃헙 주소: https://github.com/Play-with-data/datasalon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 4.3 지도시각화"
    ]
   },
@@ -85,21 +97,46 @@
    "outputs": [],
    "source": [
     "# 예제 4-25 네이버지도 API 사용 예시\n",
+    "# import requests\n",
+    "\n",
+    "# searching = '합정 스타벅스'\n",
+    "# base_url = 'https://naveropenapi.apigw.ntruss.com/map-place/v1/search'\n",
+    "# query_string = '?query={}&coordinate=126.977967,37.566329'.format(searching)\n",
+    "# url = base_url + query_string\n",
+    "\n",
+    "# client_id = 'y86xoxxxxx'         \n",
+    "# client_secret = 'cBxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+    "\n",
+    "# headers = {'X-NCP-APIGW-API-KEY-ID': client_id, \n",
+    "#            'X-NCP-APIGW-API-KEY': client_secret} \n",
+    "\n",
+    "# places = requests.get(url, headers = headers).json()['places']\n",
+    "# places\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# 예제 4-25(카카오API변경) 카카오 검색 API 사용 예시\n",
+    "\n",
     "import requests\n",
     "\n",
     "searching = '합정 스타벅스'\n",
-    "base_url = 'https://naveropenapi.apigw.ntruss.com/map-place/v1/search'\n",
-    "query_string = '?query={}&coordinate=126.977967,37.566329'.format(searching)\n",
-    "url = base_url + query_string\n",
+    "url = 'https://dapi.kakao.com/v2/local/search/keyword.json?query={}'.format(searching)\n",
     "\n",
-    "client_id = 'y86xoxxxxx'         \n",
-    "client_secret = 'cBxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+    "headers = {\n",
+    "    \"Authorization\": \"KakaoAK 여기에카카오API키입력하세요\"     \n",
+    "    # 입력시 반드시  KakaoAK 뒤에 한 칸 띄우고 API키 값을 적어야 합니다. \n",
+    "}\n",
     "\n",
-    "headers = {'X-NCP-APIGW-API-KEY-ID': client_id, \n",
-    "           'X-NCP-APIGW-API-KEY': client_secret} \n",
-    "\n",
-    "places = requests.get(url, headers = headers).json()['places']\n",
-    "places\n"
+    "places = requests.get(url, headers = headers).json()['documents']\n",
+    "places\n",
+    "\n"
    ]
   },
   {
@@ -108,22 +145,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 예제 4-26 Search Place API 장소 검색 함수 만들기\n",
+    "# # 예제 4-26 Search Place API 장소 검색 함수 만들기\n",
+    "# def find_places(searching):\n",
+    "#     # ① 접속URL 만들기\n",
+    "#     base_url = 'https://naveropenapi.apigw.ntruss.com/map-place/v1/search'\n",
+    "#     query_string = '?query={}&coordinate=126.977967,37.566329'.format(searching)\n",
+    "#     url = base_url + query_string\n",
+    "#     # ② headers 입력하기\n",
+    "#     client_id = 'y86xoxxxxx'         \n",
+    "#     client_secret = 'cB2gj68owMnDi45GgcoA2SomRV6gCxxxxxxxxxxx'\n",
+    "#     headers = {'X-NCP-APIGW-API-KEY-ID': client_id, \n",
+    "#                    'X-NCP-APIGW-API-KEY': client_secret} \n",
+    "#     # ③ API 요청&정보 받기\n",
+    "#     places = requests.get(url, headers = headers).json()['places']  \n",
+    "#     # ④ 필요한 정보 선택하기\n",
+    "#     place = places[0] \n",
+    "#     name = place['name']\n",
+    "#     x=place['x']\n",
+    "#     y=place['y']\n",
+    "#     data = [name, x, y, searching] \n",
+    "\n",
+    "#     return data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예제 4-26(카카오API변경) 장소 검색 함수 만들기\n",
     "def find_places(searching):\n",
     "    # ① 접속URL 만들기\n",
-    "    base_url = 'https://naveropenapi.apigw.ntruss.com/map-place/v1/search'\n",
-    "    query_string = '?query={}&coordinate=126.977967,37.566329'.format(searching)\n",
-    "    url = base_url + query_string\n",
+    "    url = 'https://dapi.kakao.com/v2/local/search/keyword.json?query={}'.format(searching)\n",
     "    # ② headers 입력하기\n",
-    "    client_id = 'y86xoxxxxx'         \n",
-    "    client_secret = 'cB2gj68owMnDi45GgcoA2SomRV6gCxxxxxxxxxxx'\n",
-    "    headers = {'X-NCP-APIGW-API-KEY-ID': client_id, \n",
-    "                   'X-NCP-APIGW-API-KEY': client_secret} \n",
+    "    headers = {\n",
+    "    \"Authorization\": \"KakaoAK 여기에카카오API키입력하세요\"\n",
+    "    }\n",
     "    # ③ API 요청&정보 받기\n",
-    "    places = requests.get(url, headers = headers).json()['places']  \n",
+    "    places = requests.get(url, headers = headers).json()['documents']\n",
     "    # ④ 필요한 정보 선택하기\n",
     "    place = places[0] \n",
-    "    name = place['name']\n",
+    "    name = place['place_name']\n",
     "    x=place['x']\n",
     "    y=place['y']\n",
     "    data = [name, x, y, searching] \n",
@@ -148,11 +211,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm_notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 예제 4-28 인스타그램 위치명 위치정보 검색하기\n",
-    "import time\n",
+    "#### 검색시 시간이 많이 걸려, 현재 작업 진행현황을 볼 수 있도록,  tqdm_notebook 추가 했습니다. : 수정일 2020.02.17)\n",
     "\n",
+    "import time\n",
     "locations_inform = [ ]\n",
-    "for location in locations:\n",
+    "for location in tqdm_notebook(locations):\n",
     "    try:\n",
     "        data = find_places(location)       \n",
     "        locations_inform.append(data) \n",
@@ -170,7 +243,7 @@
    "source": [
     "# 예제 4-29 위치정보 저장하기\n",
     "locations_inform_df = pd.DataFrame(locations_inform)\n",
-    "locations_inform_df.columns = ['네이버위치명','경도','위도','인스타위치명']\n",
+    "locations_inform_df.columns = ['name_official','경도','위도','인스타위치명']\n",
     "locations_inform_df.to_excel('./files/3_3_locations.xlsx', index=False)\n"
    ]
   },
@@ -181,7 +254,7 @@
    "outputs": [],
    "source": [
     "# 예제 4-30 인스타 게시량 및 위치정보 데이터 불러오기\n",
-    "location_counts_df = pd.read_excel('./files/3_3_location_counts.xlsx')\n",
+    "location_counts_df = pd.read_excel('./files/3_3_location_counts.xlsx', index_col = 0)\n",
     "locations_inform_df = pd.read_excel('./files/3_3_locations.xlsx')"
    ]
   },
@@ -194,6 +267,7 @@
     "# 예제 4-31 위치 데이터 병합하기\n",
     "location_data = pd.merge(locations_inform_df, location_counts_df, \n",
     "                         how = 'inner', left_on = 'name_official', right_index=True)\n",
+    "\n",
     "location_data.head()\n"
    ]
   },
@@ -203,8 +277,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 추가) 동일한 name_official 가지는 데이터 --> 인스타 게시 횟수 합치기\n",
+    "### 수정일자 : 2020.02.17\n",
+    "location_data = location_data.pivot_table(index = ['name_official','경도','위도'], values = 'place', aggfunc='sum')\n",
+    "location_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 예제 4-32 병합한 데이터 저장하기\n",
-    "location_data.to_excel('./files/3_3_location_inform.xlsx', index=False)"
+    "location_data.to_excel('./files/3_3_location_inform.xlsx')"
    ]
   },
   {
@@ -232,6 +318,8 @@
    "outputs": [],
    "source": [
     "# 예제 4-34 지도 표시하기\n",
+    "### 변수명 수정  수정일자 2020.02.17\n",
+    "\n",
     "import folium\n",
     "\n",
     "Mt_Hanla =[33.362500, 126.533694]\n",
@@ -241,8 +329,8 @@
     "    name = location_data ['name_official'][i]    # 공식명칭\n",
     "    count = location_data ['place'][i]           # 게시글 개수\n",
     "    size = int(count)*2\n",
-    "    long = float(location_data['y'][i])      \n",
-    "    lat = float(location_data['x'][i])       \n",
+    "    long = float(location_data['위도'][i])      \n",
+    "    lat = float(location_data['경도'][i])       \n",
     "    folium.CircleMarker((long,lat), radius = size, color='red', popup=name).add_to(map_jeju)\n",
     "    \n",
     "map_jeju"
@@ -272,6 +360,8 @@
    "outputs": [],
    "source": [
     "# 예제 4-36 지도 표시하기(마커 집합)\n",
+    "### 변수명 수정  수정일자 2020.02.17\n",
+    "\n",
     "from folium.plugins import MarkerCluster\n",
     "\n",
     "locations = []\n",
@@ -279,8 +369,8 @@
     "\n",
     "for i in range(len(location_data)):\n",
     "    data = location_data.iloc[i]  # 행 하나씩\n",
-    "    locations.append((float(data['y']),float(data['x'])))    # 위도 , 경도 순으로..\n",
-    "    names.append(data['name'])\n",
+    "    locations.append((float(data['위도']),float(data['경도'])))    # 위도 , 경도 순으로..\n",
+    "    names.append(data['name_official'])\n",
     "\n",
     "icon_create_function = \"\"\"\\\n",
     "function(cluster) {\n",
@@ -335,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
