--- a/4_Jeju_Hotplace/4_1_Instagram_Crawling.ipynb
+++ b/4_Jeju_Hotplace/4_1_Instagram_Crawling.ipynb
@@ -211,7 +211,7 @@
     "for fname in f_list:\n",
     "    fpath = folder + fname\n",
     "    temp = pd.read_excel(fpath)\n",
-    "    jeju_insta_df.append(temp)\n",
+    "    jeju_insta_df = jeju_insta_df.append(temp)\n",
     "\n",
     "jeju_insta_df.columns =['content','data','like','place','tags']\n"
    ]
@@ -246,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
