인스타그램 로그인 추가(2020.05.07)

--- a/4_Jeju_Hotplace/4_1_Instagram_Crawling.ipynb
+++ b/4_Jeju_Hotplace/4_1_Instagram_Crawling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 예제 4-2 selenium으로 URL 접속하기\n",
+    "# 예제 4-2 selenium으로 URL 접속하기 - 1\n",
+    "# 인스타그램 로그인 부분 중간 삽입(2020.05.07)\n",
     "from selenium import webdriver\n",
     "\n",
-    "driver = webdriver.Chrome(\"c:/playwithdata/chromedriver.exe\")   \n",
+    "driver = webdriver.Chrome(\"c:/playwithdata/chromedriver.exe\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예제 4-2 selenium으로 URL 접속하기 - 2\n",
+    "# 인스타그램 로그인 부분 추가(2020.05.07)\n",
     "\n",
+    "# 인스타그램 접속후, 로그인 하기\n",
+    "driver.get('https://www.instargram.com')\n",
+    "time.sleep(2)\n",
+    "\n",
+    "email = '인스타계정입력해주세요'   ### 계정 정보 수정 필요\n",
+    "input_id = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[0]\n",
+    "input_id.clear()\n",
+    "input_id.send_keys(email)\n",
+    "\n",
+    "password = '인스타비번입력해주세요' ### 비번 정보 수정 필요\n",
+    "input_pw = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[1]\n",
+    "input_pw.clear()\n",
+    "input_pw.send_keys(password)\n",
+    "input_pw.submit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예제 4-2 selenium으로 URL 접속하기 - 3\n",
+    "# 인스타그램 로그인 부분 중간 삽입(2020.05.07)\n",
     "word = \"제주도맛집\"\n",
     "url = insta_searching(word)\n",
-    "driver.get(url)\n"
+    "driver.get(url)"
    ]
   },
   {
@@ -60,7 +95,9 @@
     "def select_first(driver):\n",
     "    first = driver.find_element_by_css_selector(\"div._9AhH0\")\n",
     "    first.click()\n",
-    "    time.sleep(3)"
+    "    time.sleep(3)\n",
+    "    \n",
+    "select_first(driver)"
    ]
   },
   {
@@ -104,7 +141,9 @@
     "        place = ''\n",
     "    # ⑦ 수집한 정보 저장하기\n",
     "    data = [content, date, like, place, tags]\n",
-    "    return data\n"
+    "    return data\n",
+    "\n",
+    "get_content(driver)"
    ]
   },
   {
@@ -125,7 +164,9 @@
     "\n",
     "    right = driver.find_element_by_css_selector ('a.HBoOv.coreSpriteRightPaginationArrow')\n",
     "    right.click()\n",
-    "    time.sleep(3)\n"
+    "    time.sleep(3)\n",
+    "\n",
+    "move_next(driver)"
    ]
   },
   {
@@ -149,6 +190,22 @@
     "\n",
     "# ① 크롬 브라우저 열기\n",
     "driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe') \n",
+    "\n",
+    "# 추가) 인스타그램 접속후, 로그인 하기  - \n",
+    "driver.get('https://www.instargram.com')\n",
+    "time.sleep(2)\n",
+    "\n",
+    "email = '인스타계정입력해주세요'   ### 계정 정보 수정 필요\n",
+    "input_id = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[0]\n",
+    "input_id.clear()\n",
+    "input_id.send_keys(email)\n",
+    "\n",
+    "password = '인스타비번입력해주세요' ### 비번 정보 수정 필요\n",
+    "input_pw = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[1]\n",
+    "input_pw.clear()\n",
+    "input_pw.send_keys(password)\n",
+    "input_pw.submit()\n",
+    "\n",
     "\n",
     "# ② 인스타그램 검색페이지 URL 만들기\n",
     "word = \"제주도맛집\"    #검색어\n",
