인스타 크롤링 update

--- a/4_Jeju_Hotplace/4_1_Instagram_Crawling.ipynb
+++ b/4_Jeju_Hotplace/4_1_Instagram_Crawling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,23 +47,34 @@
     "로그인을 해야만 게시물을 볼 수 있도록 인스타그램 운영 정책이 변경되었습니다(2020.04.27)  \n",
     "인스타그램 로그인을 하는 코드를 추가하였습니다.   \n",
     "직접 브라우저에 계정 정보를 입력해도 되고, 코드를 이용해도 됩니다.   \n",
-    "다만,  본인의 계정/비번 정보가 외부에 노출되지 않도록 주의하시기 바랍니다.   "
+    "다만,  본인의 계정/비번 정보가 외부에 노출되지 않도록 주의하시기 바랍니다. \n",
+    "\n",
+    "※ 주의) `인스타 로그인`을 위해 계정 `아이디` / `비번` 입력이 필요합니다. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 예제 4-2 selenium으로 URL 접속하기 - 2\n",
     "# 인스타그램 로그인 부분 추가(2020.05.07)\n",
+    "import time\n",
     "\n",
     "# 인스타그램 접속하기\n",
     "driver.get('https://www.instargram.com')\n",
-    "time.sleep(2)\n",
-    "\n",
-    "# 로그인하기\n",
+    "time.sleep(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예제 4-2 selenium으로 URL 접속하기 - 3\n",
+    "# 인스타계정으로 로그인하기\n",
     "email = '인스타계정입력해주세요'   ### 계정 정보 수정 필요\n",
     "input_id = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[0]\n",
     "input_id.clear()\n",
@@ -73,16 +84,30 @@
     "input_pw = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[1]\n",
     "input_pw.clear()\n",
     "input_pw.send_keys(password)\n",
-    "input_pw.submit()\n"
+    "input_pw.submit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위 코드 실행후 인스타그램 로그인이 완료되어야 합니다.  \n",
+    "\n",
+    "추가로, 2단계 인증이 필요하다고 나올 경우 인증까지 완료해주세요. \n",
+    "\n",
+    "인스타계정이 아닌 페이스북계정으로 로그인이 필요하거나  코드에 아이디/비번 입력하는 것이 부담되는 분은\n",
+    "\n",
+    "수기로 직접 입력해서 로그인까지 완료하시면 됩니다. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 예제 4-2 selenium으로 URL 접속하기 - 3\n",
+    "# 예제 4-2 selenium으로 URL 접속하기 - 4\n",
     "word = \"제주도맛집\"\n",
     "url = insta_searching(word)\n",
     "driver.get(url)"
@@ -125,6 +150,7 @@
    "source": [
     "# 예제 4-4 게시글 정보 가져오기\n",
     "import re\n",
+    "from bs4 import BeautifulSoup\n",
     "\n",
     "def get_content(driver):\n",
     "    # ① 현재 페이지 html 정보 가져오기\n",
@@ -172,7 +198,7 @@
     "# 예제 4-5 다음 게시글 열기\n",
     "def move_next(driver):\n",
     "\n",
-    "    right = driver.find_element_by_css_selector ('a.HBoOv.coreSpriteRightPaginationArrow')\n",
+    "    right = driver.find_element_by_css_selector ('a.coreSpriteRightPaginationArrow')\n",
     "    right.click()\n",
     "    time.sleep(3)\n",
     "\n",
@@ -192,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 예제 4-6 인스타그램 크롤링\n",
+    "# 예제 4-6 인스타그램 크롤링  1 - 인스타그램 로그인하기\n",
     "from selenium import webdriver\n",
     "from bs4 import BeautifulSoup\n",
     "import time\n",
@@ -205,6 +231,8 @@
     "driver.get('https://www.instargram.com')\n",
     "time.sleep(2)\n",
     "\n",
+    "\n",
+    "######## 인스타 계정 로그인이 필요합니다 #########\n",
     "email = '인스타계정입력해주세요'   ### 계정 정보 수정 필요\n",
     "input_id = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[0]\n",
     "input_id.clear()\n",
@@ -214,9 +242,30 @@
     "input_pw = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[1]\n",
     "input_pw.clear()\n",
     "input_pw.send_keys(password)\n",
-    "input_pw.submit()\n",
+    "input_pw.submit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위 코드 실행후 인스타그램 로그인이 완료되어야 합니다.  \n",
     "\n",
+    "추가로, 2단계 인증이 필요하다고 나올 경우 인증까지 완료해주세요. \n",
     "\n",
+    "인스타계정이 아닌 페이스북계정으로 로그인이 필요하거나  코드에 아이디/비번 입력하는 것이 부담되는 분은\n",
+    "\n",
+    "수기로 직접 입력해서 로그인까지 완료하시면 됩니다. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예제 4-6 인스타그램 크롤링  2 - 크롤링하기\n",
     "# ② 인스타그램 검색페이지 URL 만들기\n",
     "word = \"제주도맛집\"    #검색어\n",
     "url = insta_searching(word)\n",
@@ -235,9 +284,15 @@
     "# ⑥→⑦→⑧ 여러 게시물 수집하기\n",
     "target = 50      # 크롤링할 게시글 수\n",
     "for i in range(target):\n",
-    "    data = get_content(driver)    # 게시글 정보 가져오기\n",
-    "    results.append(data)\n",
-    "    move_next(driver)\n",
+    "    # 게시글 수집에 오류 발생시(네트워크 문제 등의 이유로)  2초 대기 후, 다음 게시글로 넘어가도록 try, except 구문 활용\n",
+    "    try:\n",
+    "        data = get_content(driver)    # 게시글 정보 가져오기\n",
+    "        results.append(data)\n",
+    "        move_next(driver)\n",
+    "    except:\n",
+    "        time.sleep(2)\n",
+    "        move_next(driver)\n",
+    "    \n",
     "\n",
     "print(results[:2])"
    ]
