멜론 사이트 개편에 따른 크롤링 코드 변경

--- a/2_Start_DataAnalysis/2_2_Crawling.ipynb
+++ b/2_Start_DataAnalysis/2_2_Crawling.ipynb
@@ -343,6 +343,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "※ 멜론 사이트 개편으로 인해, 크롤링 진행 코드가 변경되었습니다. (updated 2020.07.13)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -382,10 +389,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 예제 2-54 50개의 노래 태그 찾기\n",
-    "songs = soup.select('#lst50')  \n",
+    "# 예제 2-54-1  100개의 노래 태그 찾기  --> 사이트 개편으로 코드 변경됨(updated 2020.07.13)\n",
+    "songs = soup.select('tr')  \n",
     "print(len(songs))\n",
     "print(songs[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예제 2-54-2  추가내용(updated 2020.07.13)\n",
+    "# 100개의 곡을 찾고 싶으나, 101개의 태그 뭉치가 검색됨    len(songs)  -->  101 \n",
+    "# 101개 중 첫 번째 태그 뭉치(songs[0]) 을 살펴보니 표에서 컬럼제목(곡정보/앨범/좋아요... )을 나타내고 있음\n",
+    "# 101개 중 첫 번째는 컬럼 제목,   두 번째 부터 끝까지,  남은 100개는 노래 정보 일 것으로 예상됨\n",
+    "\n",
+    "songs = soup.select('tr')[1:]     # 첫 번째는 제외하고, 두 번째(인덱스번호 1) 부터 끝까지만 선택\n",
+    "print(len(songs))                 # 100  으로   정리하고 싶은 노래 개수에 맞게 선택됨\n",
+    "print(songs[0])                   # 그 중 첫 번째 태그를 보니, 1위 곡으로 조회됨"
    ]
   },
   {
@@ -483,14 +506,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 예제 2-63 멜론 인기차트 중 상위 50곡 크롤링(정리)\n",
+    "# 예제 2-63 멜론 인기차트 중 상위 50곡 크롤링(정리)  # 멜론 사이트 개편으로 코드 수정(updated 2020.07.13)\n",
     "driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe')     \n",
     "url = 'http://www.melon.com/chart/index.htm'\n",
     "driver.get(url)          \n",
     "html = driver.page_source\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "                               \n",
-    "songs = soup.select('#lst50')      \n",
+    "songs = soup.select('tr')[1:]     # 멜론 사이트 개편으로 코드 수정(updated 2020.07.13)\n",
     "for song in songs:                                        \n",
     "    title = song.select('div.ellipsis.rank01 > span > a')[0].text\n",
     "    singer = song.select ('div.ellipsis.rank02 > a')[0].text  \n",
@@ -515,7 +538,7 @@
     "url = 'http://www.melon.com/chart/index.htm'\n",
     "driver.get(url)          \n",
     "                                \n",
-    "songs = driver.find_elements_by_css_selector('#lst50')      \n",
+    "songs = driver.find_elements_by_css_selector('tr')[1:]     # 멜론 사이트 개편으로 코드 수정(updated 2020.07.13)\n",
     "for song in songs:                                        \n",
     "    title = song.find_elements_by_css_selector('div.ellipsis.rank01 > span > a')[0].text\n",
     "    singer = song.find_elements_by_css_selector('div.ellipsis.rank02 > a')[0].text  \n",
@@ -540,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
