--- a/4_Jeju_Hotplace/4_1_Instagram_Crawling.ipynb
+++ b/4_Jeju_Hotplace/4_1_Instagram_Crawling.ipynb
@@ -143,6 +143,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mac 에서 작성된 글의 경우 크롤링 데이터 엑셀파일로 저장시,  한글 자음/모음이 분리되는 현상이 확인되었습니다.   \n",
+    "저장하는 과정에서 unicodedata를 이용하여  'NFC' 방식으로(자음/모음 합쳐서 한글 처리하는 방식) 전환하는 코드 추가되었습니다.   \n",
+    "한글이 사용되는 본문 및 장소명 부분에 해당 코드 추가하였습니다. (수정일 2020.08.20)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -151,6 +160,7 @@
     "# 예제 4-4 게시글 정보 가져오기\n",
     "import re\n",
     "from bs4 import BeautifulSoup\n",
+    "import unicodedata   # 추가, 2020.08.20\n",
     "\n",
     "def get_content(driver):\n",
     "    # ① 현재 페이지 html 정보 가져오기\n",
@@ -159,6 +169,7 @@
     "    # ② 본문 내용 가져오기\n",
     "    try:\n",
     "        content = soup.select('div.C4VMK > span')[0].text\n",
+    "        content = unicodedata.normalize('NFC', content)   # 신규 추가. 2020.08.20\n",
     "    except:\n",
     "        content = ' '\n",
     "    # ③ 본문 내용에서 해시태그 가져오기(정규식 활용)\n",
@@ -173,6 +184,7 @@
     "    # ⑥ 위치정보 가져오기\n",
     "    try: \n",
     "        place = soup.select('div.M30cS')[0].text\n",
+    "        place = unicodedata.normalize('NFC', place)      # 신규 추가. 2020.08.20\n",
     "    except:\n",
     "        place = ''\n",
     "    # ⑦ 수집한 정보 저장하기\n",
@@ -181,6 +193,13 @@
     "\n",
     "get_content(driver)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -368,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
