--- a/02_개정판/6_Starbucks_Location/6_1_2_OpenData_API.ipynb
+++ b/02_개정판/6_Starbucks_Location/6_1_2_OpenData_API.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# 예제 6-14  자주 사용하는 변수를 미리 선언\n",
     "# 등록된 서울열린데이터광장 API 호출 키를 변수에 입력해주세요\n",
-    "SEOUL_API_AUTH_KEY = '76744d4651726f6c3132376e674b4b4b'"
+    "SEOUL_API_AUTH_KEY = '76744d4651726f6c3132376e6*******'"
    ]
   },
   {
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://openapi.seoul.go.kr:8088/76744d4651726f6c3132376e674b4b4b/json/SdeTlSccoSigW/1/25\n"
+      "http://openapi.seoul.go.kr:8088/76744d4651726f6c3132376e6*******/json/SdeTlSccoSigW/1/25\n"
      ]
     }
    ],
@@ -1266,7 +1266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
