--- a/02_개정판/6_Starbucks_Location/6_1_1_Crawling_Starbucks_List.ipynb
+++ b/02_개정판/6_Starbucks_Location/6_1_1_Crawling_Starbucks_List.ipynb
@@ -27,10 +27,10 @@
    "outputs": [],
    "source": [
     "# 예제 6-2  webdriver 실행 후 스타벅스의 지역별 매장 검색 화면에 접속\n",
-    "# browser = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
-    "browser = webdriver.Chrome('../chromedriver')\n",
+    "driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
+    "# driver = webdriver.Chrome('../chromedriver')\n",
     "url = 'https://www.istarbucks.co.kr/store/store_map.do?disp=locale'\n",
-    "browser.get(url)"
+    "driver.get(url)"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "source": [
     "# 예제 6-3 webdriver로 ‘서울’ 버튼 요소를 찾아 클릭\n",
     "seoul_btn = '#container > div > form > fieldset > div > section > article.find_store_cont > article > article:nth-child(4) > div.loca_step1 > div.loca_step1_cont > ul > li:nth-child(1) > a'\n",
-    "browser.find_element_by_css_selector(seoul_btn).click()"
+    "driver.find_element_by_css_selector(seoul_btn).click()"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "source": [
     "# 예제 6-4  webdriver로 ‘전체’ 버튼 요소를 찾아 클릭\n",
     "all_btn = '#mCSB_2_container > ul > li:nth-child(1) > a'\n",
-    "browser.find_element_by_css_selector(all_btn).click()"
+    "driver.find_element_by_css_selector(all_btn).click()"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# 예제 6-5  BeautifulSoup으로 HTML 파서 만들기\n",
-    "html = browser.page_source\n",
+    "html = driver.page_source\n",
     "soup = BeautifulSoup(html, 'html.parser')"
    ]
   },
@@ -160,13 +160,6 @@
     "# 예제 6-12 엑셀로 저장\n",
     "seoul_starbucks_df.to_excel('./files/seoul_starbucks_list.xlsx', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -185,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
