--- a/02_개정판/1_First_Step/1_3_Python_Basic.ipynb
+++ b/02_개정판/1_First_Step/1_3_Python_Basic.ipynb
@@ -229,11 +229,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# 예제 1-15 문자열 반복하기(*)\n",
-    "z = “*”\n",
+    "z = \"*\"\n",
     "print( z * 10)    "
    ]
   },
