BeautifulSoup parser 변경

--- a/02_개정판/5_Jeju_Hotplace/5_1_Instagram_Crawling.ipynb
+++ b/02_개정판/5_Jeju_Hotplace/5_1_Instagram_Crawling.ipynb
@@ -190,7 +190,7 @@
     "def get_content(driver):\n",
     "    # ① 현재 페이지 html 정보 가져오기\n",
     "    html = driver.page_source\n",
-    "    soup = BeautifulSoup(html, 'lxml')\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    # ② 본문 내용 가져오기\n",
     "    try:\n",
     "        content = soup.select('div.C4VMK > span')[0].text\n",
@@ -405,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
