Update Starbucks list filename
6.1.1 결과: seoul_starbucks.xlsx
6.2.1 결과: seoul_starbucks_list.xlsx

--- a/02_개정판/6_Starbucks_Location/6_2_1_Starbucks_Address.ipynb
+++ b/02_개정판/6_Starbucks_Location/6_2_1_Starbucks_Address.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# 예제 6-39  서울시 스타벅스 매장 목록이 담긴 엑셀 파일 불러오기\n",
     "import pandas as pd\n",
-    "seoul_starbucks = pd.read_excel('./files/seoul_starbucks_list.xlsx', header=0)\n",
+    "seoul_starbucks = pd.read_excel('./files/seoul_starbucks.xlsx', header=0)\n",
     "seoul_starbucks.head()"
    ]
   },
