--- a/02_개정판/6_Starbucks_Location/6_1_1_Crawling_Starbucks_List.ipynb
+++ b/02_개정판/6_Starbucks_Location/6_1_1_Crawling_Starbucks_List.ipynb
@@ -158,7 +158,7 @@
    "outputs": [],
    "source": [
     "# 예제 6-12 엑셀로 저장\n",
-    "seoul_starbucks_df.to_excel('./files/seoul_starbucks_list.xlsx', index=False)"
+    "seoul_starbucks_df.to_excel('./files/seoul_starbucks.xlsx', index=False)"
    ]
   }
  ],
@@ -178,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
