--- a/02_개정판/6_Starbucks_Location/6_3_2_Starbucks_Location_Visualization.ipynb
+++ b/02_개정판/6_Starbucks_Location/6_3_2_Starbucks_Location_Visualization.ipynb
@@ -52,9 +52,11 @@
    "source": [
     "# 예제 6-60 folium 지도 생성\n",
     "starbucks_bubble = folium.Map(\n",
-    "    location=[37.573050, 126.979189], tiles ='CartoDB positron' , zoom_start=11 )\n",
-    "#     tiles='CartoDB dark_matter',\n",
-    "#     tiles='CartoDB',\n",
+    "    location=[37.573050, 126.979189],\n",
+    "    #tiles ='CartoDB positron' ,\n",
+    "    tiles='CartoDB dark_matter',\n",
+    "    # tiles='CartoDB',\n",
+    "    zoom_start=11 )\n",
     "    \n",
     "# )"
    ]
@@ -65,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "starbucks_bubble"
+    "#starbucks_bubble"
    ]
   },
   {
