--- a/02_개정판/5_Jeju_Hotplace/5_1_Instagram_Crawling.ipynb
+++ b/02_개정판/5_Jeju_Hotplace/5_1_Instagram_Crawling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,36 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['안녕하세요^^이춘옥의 원조!원조! 고등어쌈밥입니다.가끔은 어머니가 가게를 작게 하셨을때손님들과 이런저런 이야기도 나누고웃고 이 때가 그립다고 하시네요^^너무 바쁜여행일정이지만 한번쯤은 남들보다 천천히 여행을즐기는것도 재미있을듯해요♥𖤐 애월본점🚖위치:제주공항 10분 애월해안도로입구🕰시간:09:00~21:00(수휴무).𖤐 월정리점🚖위치: 제주시 구좌읍 월정중길 19-11🕰시간:09:00~20:00(목휴무).💡제주도 원조 고등어쌈밥 맛집💡가족끼리 가도 부담없는 맛과 양과 자리💡공항에서 15분거리..#애월맛집 #제주도맛집#제주시맛집 #제주공항근처맛집#이호테우해변맛집 #제주애월맛집#애월점심식사 #애월해안로도로맛집 #제주시맛있는집 #제주공항근처맛집추천 #애월바다 #제주저렴한맛집 #애월갈치조림',\n",
-       " '2020-08-09',\n",
-       " 0,\n",
-       " '',\n",
-       " ['#애월맛집',\n",
-       "  '#제주도맛집',\n",
-       "  '#제주시맛집',\n",
-       "  '#제주공항근처맛집',\n",
-       "  '#이호테우해변맛집',\n",
-       "  '#제주애월맛집',\n",
-       "  '#애월점심식사',\n",
-       "  '#애월해안로도로맛집',\n",
-       "  '#제주시맛있는집',\n",
-       "  '#제주공항근처맛집추천',\n",
-       "  '#애월바다',\n",
-       "  '#제주저렴한맛집',\n",
-       "  '#애월갈치조림']]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 예제 5-7 게시글 정보 가져오기\n",
     "import re\n",
@@ -345,8 +318,8 @@
     "import pandas as pd\n",
     "\n",
     "results_df = pd.DataFrame(results)\n",
-    "results_df.columns = ['content','data','like','place','tags']\n",
-    "results_df.to_excel('./files/1_crawling_jejudoMatJip.xlsx')\n"
+    "results_df.columns = ['content','date','like','place','tags']\n",
+    "results_df.to_excel('./files/1_crawling_jejudoMatJip.xlsx', index=False)\n"
    ]
   },
   {
@@ -372,7 +345,16 @@
     "    temp = pd.read_excel(fpath)\n",
     "    jeju_insta_df = jeju_insta_df.append(temp)\n",
     "\n",
-    "jeju_insta_df.columns =['content','data','like','place','tags']\n"
+    "jeju_insta_df.columns =['content','date','like','place','tags']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jeju_insta_df.head()"
    ]
   },
   {
@@ -405,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
