인스타그램 로그인 페이지 오류시 해결 링크 추가

--- a/02_개정판/5_Jeju_Hotplace/5_1_Instagram_Crawling.ipynb
+++ b/02_개정판/5_Jeju_Hotplace/5_1_Instagram_Crawling.ipynb
@@ -54,6 +54,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ※ 로그인 페이지로 접속이 되지 않고 오류 화면이 보일 경우 아래 링크를 참고하세요\n",
+    "https://www.notion.so/playwithdata/c02e510507504b42ae6073c1fbb46f29"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
