다나와 크롤링 수정

--- a/02_개정판/7_Best_Product/7_1&2_Crawling.ipynb
+++ b/02_개정판/7_Best_Product/7_1&2_Crawling.ipynb
@@ -124,20 +124,18 @@
     "# 예제 7-9 반복문으로 검색 결과의 1페이지에 대한 상품 정보 추출\n",
     "prod_data = []\n",
     "for prod_item in prod_items:\n",
-    "    try: # ① 상품명 가져오기\n",
+    "    if 'product-pot' in prod_item['class']:\n",
+    "        continue  # 공백부분(‘li.prod_item.product-pot’) 제외하기\n",
+    "    try:\n",
+    "        # ① 상품명 가져오기\n",
     "        title = prod_item.select('p.prod_name > a')[0].text.strip()\n",
-    "    except:\n",
-    "        title = ''\n",
-    "    try: # ② 스펙 목록 가져오기\n",
+    "        # ② 스펙 목록 가져오기\n",
     "        spec_list = prod_item.select('div.spec_list')[0].text.strip()\n",
+    "        # ③ 가격 정보 가져오기 \n",
+    "        price = prod_item.select('li.rank_one > p.price_sect > a > strong')[0].text.strip().replace(\",\", \"\")\n",
+    "        prod_data.append([title, spec_list, price])\n",
     "    except:\n",
-    "        spec_list = ''\n",
-    "    try: # ③ 가격 정보 가져오기 \n",
-    "        price = prod_item.select('li.rank_one > p.price_sect > a > strong')[0].text.strip().replace(\",\",\"\")\n",
-    "    except:\n",
-    "        price = 0\n",
-    "    prod_data.append([title, spec_list, price])\n",
-    "    \n",
+    "        pass  # 진행시 에러가 발생할 경우(광고 상품 등) 넘어가기\n",
     "print(len(prod_data))\n",
     "print(prod_data)"
    ]
@@ -151,25 +149,19 @@
     "# 예제 7-10 상품 정보 태그에서 원하는 정보를 추출하는 함수\n",
     "def get_prod_items(prod_items):\n",
     "    prod_data = []\n",
-    "    \n",
     "    for prod_item in prod_items:\n",
-    "        # ① 상품명 가져오기\n",
+    "        if 'product-pot' in prod_item['class']:\n",
+    "            continue  # 공백부분(‘li.prod_item.product-pot’) 제외하기\n",
     "        try:\n",
+    "            # ① 상품명 가져오기\n",
     "            title = prod_item.select('p.prod_name > a')[0].text.strip()\n",
-    "        except:\n",
-    "            title = ''\n",
-    "        # ② 스펙 목록 가져오기\n",
-    "        try: \n",
+    "            # ② 스펙 목록 가져오기\n",
     "            spec_list = prod_item.select('div.spec_list')[0].text.strip()\n",
+    "            # ③ 가격 정보 가져오기\n",
+    "            price = prod_item.select('li.rank_one > p.price_sect > a > strong')[0].text.strip().replace(\",\", \"\")\n",
+    "            prod_data.append([title, spec_list, price])\n",
     "        except:\n",
-    "            spec_list = ''\n",
-    "        # ③ 가격 정보 가져오기 \n",
-    "        try: \n",
-    "            price = int(prod_item.select('li.rank_one > p.price_sect > a > strong')[0].text.strip().replace(\",\",\"\"))\n",
-    "        except:\n",
-    "            price = 0\n",
-    "        prod_data.append([title, spec_list, price])\n",
-    "        \n",
+    "            pass  # 진행시 에러가 발생할 경우(광고 상품 등) 넘어가기\n",
     "    return prod_data"
    ]
   },
@@ -480,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
